--- a/src/components/css/upNavBar.css
+++ b/src/components/css/upNavBar.css
@@ -1,5 +1,22 @@
 .fatherupNavBarClass{
-    display: block;
-    width: 100%;
-    background-color: aqua;
+    padding: 2px;
+    margin: 1px;    
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content:start;
+}
+
+.NavBarClass{
+    display: flex;
+    align-items: center;
+    background-color: #161313;
+    flex-direction: row;
+    justify-content:space-between;
+}
+@media (max-width:700px){
+    .NavBarClass{
+        display: none;
+    }
+    
 }
