--- a/src/components/css/list_servizi.css
+++ b/src/components/css/list_servizi.css
@@ -1,7 +1,12 @@
 .fatherListServiziClass{
     position: relative;
-    width: 25%;
+    width: 30%;
     background-color: #e56666;
+}
+
+.fatherListServiziClass .fatherLiClass{
+color: white;
+background-color: black;
 }
 .iconArrow{
     display: none;
@@ -14,6 +19,11 @@
         top: 50%;
         left: 95%;
     }
+}
+    @media (min-width:800px){
+        .fatherListServiziClass{
+            width: 235px;
+        }
     
 }
 
