--- a/src/components/css/servizio.css
+++ b/src/components/css/servizio.css
@@ -7,7 +7,10 @@
     display: block;
     text-align: center;   
     list-style-type: none;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;    
+}
+.fatherLiClass:hover{
+    cursor: pointer;
 }
 .linkLiClass{
     text-decoration: none;     
