--- a/src/components/css/contents.css
+++ b/src/components/css/contents.css
@@ -1,3 +1,25 @@
 .fatherContentClass{
     width: 70%; 
+    min-height: 100%;
 }
+@media (min-width:900px){
+    .fatherContentClass{
+        min-width:73%;
+    }
+
+}
+
+@media (min-width:1000px){
+    .fatherContentClass{
+        min-width:75%;
+    }
+
+}
+
+@media (min-width:1200px){
+    .fatherContentClass{
+        min-width:80%;
+    }
+
+}
+
