--- a/src/components/css/footer.css
+++ b/src/components/css/footer.css
@@ -1,8 +1,8 @@
 .fatherFooterClass{
     display: flex;
     width: 100%;
-    position: absolute;
-    bottom: 10px;
-    height: 60px;
+    /* position: absolute; 
+    bottom: 10px;*/
+    height: 150px;
     background: #90d61f;
 }
